[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ensure the correct flags get passed to the rust compiler
[lib]
crate-type = ["cdylib"] # d dynamic library

[dependencies]
wasm-bindgen = "0.2.92"
